--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/Commenti/commenti.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewUtility/newutility.controller.js"></script>
+        <script type="text/javascript" src="app/features/Details/SegnalationDetail/segnalationdetail.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
