--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -97,6 +97,14 @@
                 </div>
             </div>
 
+            <div class="row height-30px"  ng-if="home.user.isRedazione()">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <a class="menu_link font-medium color-grey pointer" ui-sref="{{home.ROUTING.nuova_edizione.name}}">NUOVA EDIZIONE</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="padding-left:30px;">
