--- a/app/features/Edizioni/edizioni.view.html
+++ b/app/features/Edizioni/edizioni.view.html
@@ -21,9 +21,9 @@
 
                     <div class="form-group form-inline search-edition" >
                         <!--<input class="form-control no-round-right pull-left" placeholder="Seleziona la data..." type="date" style="height: 42px;width: 230px;">-->
-                        <md-datepicker md-open-on-focus ng-change="edizioni.dateChanged()" class="form-control no-round-right pull-left" ng-model="edizioni.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;margin-right: 0;"></md-datepicker>
+                        <md-datepicker md-open-on-focus class="form-control no-round-right pull-left" ng-model="edizioni.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;margin-right: 0;"></md-datepicker><!--ng-change="edizioni.dateChanged()"-->
 
-                        <button class="btn btn-green no-round-left pull-left" style="padding-left:12px; padding-right:12px;">
+                        <button class="btn btn-green no-round-left pull-left" style="padding-left:12px; padding-right:12px;" ng-click="edizioni.createNew()">
                             <i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;CREA NUOVA EDIZIONE
                         </button>
                     </div>
