--- a/app/features/Edizioni/edizioni.view.html
+++ b/app/features/Edizioni/edizioni.view.html
@@ -40,7 +40,9 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                     <!---------- ELEMENT ---------->
-                    <div class="row" ng-repeat="edizione in edizioni.edizioni | limitTo:edizioni.options.pager.limit:-(edizioni.options.pager.active*edizioni.options.pager.limit)">
+                    <div class="row"
+                         ng-click="edizione.showDetail()"
+                         ng-repeat="edizione in edizioni.edizioni | limitTo:edizioni.options.pager.limit:-(edizioni.options.pager.active*edizioni.options.pager.limit)">
                         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                             <div class="row">
@@ -98,7 +100,7 @@
                             <span class="pull-right lsf ">dropdown</span>
                         </button>
                         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                            <li role="menuitem" ng-repeat="page in canali.generatePages()">
+                            <li role="menuitem" ng-repeat="page in edizioni.generatePages()">
                                 <a ng-click="edizioni.changePage(page)">PAGINA {{page}}</a>
                             </li>
                         </ul>
