--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -178,7 +178,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
-                                    <p class="font-normal color-grey"><span class="font-bold">{{article.views()}}</span> visualizzazioni</p>
+                                    <p class="font-normal color-grey"><span class="font-bold">{{article.viewsCounter()}}</span> visualizzazioni</p>
                                 </div>
                                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                                     <p class="font-normal color-grey"><span class="font-bold">{{article.likeCount()}}</span> mi piace</p>
@@ -193,7 +193,7 @@
                             <!--- STATS WITHOUT REPORTS-->
                             <div class="row" ng-if="!article.isReported()">
                                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
-                                    <p class="font-normal color-grey"><span class="font-bold">{{article.views()}}</span> visualizzazioni</p>
+                                    <p class="font-normal color-grey"><span class="font-bold">{{article.viewsCounter()}}</span> visualizzazioni</p>
                                 </div>
                                 <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                                     <p class="font-normal color-grey"><span class="font-bold">{{article.likeCount()}}</span> mi piace</p>
