--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -343,7 +343,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3" ng-if="!!when.end">
-                                                    <button class="no-border" ng-click="article.deleteWhen($index)">
+                                                    <button class="no-border" ng-click="article.deleteWhen($index)" style="background-color:transparent;">
                                                         <!--<i class="fa fa-plus"></i>-->
                                                         <p class="font-small color-grey">&nbsp;</p>
                                                         <img src="app/assets/images/close_button_red.png" width="35px" />
@@ -355,7 +355,7 @@
 
                                     <div class="row"  style="margin-top: 20px">
                                         <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-click="article.addDate()">
-                                            <button class="no-border">
+                                            <button class="no-border" style="background-color:transparent;">
                                                 <!--<i class="fa fa-plus"></i>-->
                                                 <img src="app/assets/images/add_azure_button.png" width="35px" />
                                             </button>
