--- a/app/features/Details/SegnalationDetail/segnalationdetail.view.html
+++ b/app/features/Details/SegnalationDetail/segnalationdetail.view.html
@@ -40,7 +40,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                     <div class="row border-bottom-grey">
                         <p class="font-small color-grey">LUOGO SEGNALAZIONE</p>
-                        <p class="no-border color-black margin-bottom-5px font-xxl roboto-slab font-bold no-padding">{{segnalationdetail.current.ds_place}}</p>
+                        <p class="no-border color-black margin-bottom-5px font-xxl roboto-slab font-bold no-padding">{{segnalationdetail.current.ds_description}}</p>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         <p class="font-small color-grey">CONTENUTO</p>
                     </div>
                     <div class="row border-bottom-grey margin-top-20px">
-                        <p class="no-border color-black margin-bottom-5px font-medium">{{segnalationdetail.current.de_description}}</p>
+                        <p class="no-border color-black margin-bottom-5px font-medium">{{segnalationdetail.current.ds_title}}</p>
                         <button class="btn btn-block-see margin-top-30px margin-bottom-30px"><span class="lsf color-blue font-xl">eye</span>&nbsp;&nbsp;&nbsp;VISTO&nbsp;&nbsp;</button>
 
                         <a class="btn btn-block-see margin-top-30px margin-bottom-30px" target="_blank"  href="{{segnalationdetail.getMediaUrl(segnalationdetail.current.id_image)}}" ng-if="segnalationdetail.current.id_image"><span class="lsf color-blue font-xl">image</span>&nbsp;&nbsp;&nbsp;MEDIA&nbsp;&nbsp;</a>
