--- a/app/features/Segnalazioni/segnalazioni.view.html
+++ b/app/features/Segnalazioni/segnalazioni.view.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <p class="font-small padding-top-5">{{report.ds_description | limitTo:150}}</p>
+                                    <p class="font-small padding-top-5">{{report.ds_title | limitTo:150}}</p>
                                 </div>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
 
                             <div class="row no-padding">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <p class="font-medium font-bold roboto-slab-bold padding-top-5">{{report.ds_place}}</p>
+                                    <p class="font-medium font-bold roboto-slab-bold padding-top-5">{{report.ds_description}}</p>
                                 </div>
                             </div>
                         </div>
@@ -93,12 +93,13 @@
 
                             <div class="row no-padding">
                                 <div class="col-lg-10 col-md-10 col-sm-9 col-xs-8 no-padding">
-                                    <p class="font-medium padding-top-5">{{report.dt_createdAt | date : 'dd - MM - yyyy'}}</p>
+                                    <p class="font-medium padding-top-5">{{report.timeInfo.dt_creationDate  | date : 'dd - MM - yyyy'}}</p>
                                 </div>
-
+<!--
                                 <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 no-padding">
                                     <img ng-if="!report.is_handled" class="img-see-segnalation" src="app/assets/images/report-unwatched.jpg">
                                 </div>
+-->
                             </div>
                         </div>
                         <!------------- FOUR COL [image]--------->
