fixed loading for media in controller

--- a/app/features/Media/media.view.html
+++ b/app/features/Media/media.view.html
@@ -33,7 +33,7 @@
                             </button>
                             <button class="btn btn-green-modal left-rounded pull-left"
                                     ngf-select="mediaCtrl.videoSelect($file)"
-                                    ladda="options.laddaVideo"
+                                    ladda="mediaCtrl.options.laddaVideo"
                                     data-style="expand-right"
                                     data-spinner-color="#FFFFFF">
                                 CARICA VIDEO
